# sweng-2023-fall-methods

./: .gitignore  COPYRIGHT  Cargo.toml  README.md  methods.conf  methods.sql  next.txt
favicon/: make_ico.sh
serve/: index.css  index.html  index.js
src/: main.rs
