[package]
name = "h4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Copied from the `hyper` server tutorial: https://hyper.rs/guides/0.14/server/hello-world/
[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
mysql = "*"
json = "0.12.4"
sea-query = "0"
form_urlencoded = "*"

